refactor: replace LinkedList with ArrayDeque
Case 1: Deque -> java.util.ArrayDeque
Case 2: Deque & List -> kotlin.collections.ArrayDeque